# spin-k8s-scenarios

./: Makefile  README.md  logs.err  pbcopy
apps/kv/: Cargo.toml  spin.toml
apps/kv/src/: lib.rs
apps/rabbit-consumer/: Cargo.toml  spin.toml
apps/rabbit-consumer/src/: lib.rs
apps/rabbit-producer/: Cargo.toml  Dockerfile
apps/rabbit-producer/src/: main.rs
apps/rust-hello/: Cargo.toml  spin.toml
apps/rust-hello/src/: lib.rs
apps/selective-deploy/: spin.toml
apps/selective-deploy/backend/: knitwit.json  package-lock.json  package.json  webpack.config.js
apps/selective-deploy/backend/.wit/components/image-manipulation-http-ts/: deps.wit
apps/selective-deploy/backend/combined-wit/: world.wit
apps/selective-deploy/backend/src/: index.ts
apps/selective-deploy/frontend/: package-lock.json  package.json  webpack.config.js
apps/selective-deploy/frontend/combined-wit/: world.wit
apps/selective-deploy/frontend/src/: index.ts
apps/sql/: Cargo.toml  runtime-config.toml  spin.toml
apps/sql/src/: lib.rs
deployments/: hello_cyclotron.yaml  kv.yaml  rabbit_consumer.yaml  rabbit_producer.yaml  rabbitmq.yaml  rabbitmq_binding.yaml  redis.yaml  rust_hello.yaml  selective-app.yaml  spin-operator.shim-executor.yaml  sql.yaml  sqld.yaml
spinkube-tui/: Cargo.toml  snip-k3d-create.toml  stories.md
spinkube-tui/src/: main.rs
